fixed homepage footer layout issues

--- a/includes/css/footer/footer_style.css
+++ b/includes/css/footer/footer_style.css
@@ -15,7 +15,7 @@
   #footer_logo {
     position: absolute;
     float: left;
-    margin: -20px 0 0 13%;
+    margin: -20px 0 0 10%;
   }
 
   #nav_links {
@@ -26,8 +26,8 @@
     transform: translateX(-50%);
     font-size: 24px;
     display: flex;
-    justify-content: space-between;
-    width: 40%;
+    justify-content: center;
+    width: 50%;
     min-width: 400px;
   }
 
@@ -52,8 +52,8 @@
     color: white;
     position: absolute;
     top: 55%;
-    left: 90%;
-    transform: translate(-90%, -55%);
+    left: 95%;
+    transform: translate(-95%, -55%);
   }
 
   #spreitenbach_footer h4 {
